--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<img class="gif-background" src="{% static 'Big Logo.png' %}" alt="GIF" class="gif">
+<img class="gif-background" src="{% static 'Big Logo (1).png' %}" alt="GIF" class="gif">
 <img class="gif-background2" src="{% static '6 Tags on right (1).png' %}" alt="GIF" class="gif">
 <!-- <img class="gif-background3" src="{% static 'Welcome Text (2).png' %}" alt="GIF" class="gif"> -->
 <img class="gif-background4" src="{% static 'Big Website Title.png' %}" alt="GIF" class="gif">
