--- a/templates/mainsite/architecture.html
+++ b/templates/mainsite/architecture.html
@@ -7,7 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'architecture.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 <style>
@@ -19,11 +20,13 @@
       perspective: 1200px; /* Slightly reduced for better 3D effect */
   }
 
-  .header { color: #ffffff; font-family: Arial, Helvetica, sans-serif   ; font-weight: bold; font-size:52px; }
+  .header {
+     color: #ffffff; font-family: Arial, Helvetica, sans-serif   ; font-weight: bold; font-size:52px; text-shadow: 3px 3px #000000; margin-top: 20px;
+}
         .card-header { background-color: #007bff; color: white; font-weight: bold; font-size: 22px; border: 2px solid black;}
         .footer { background-color: #f8f9fa; text-align: center; padding: 10px; font-size: 0.8rem; }
         .card { 
-            margin-bottom: 40px; border-radius: 10px; box-shadow: 0 0px 10px 2px ; background-color: beige;;
+            margin-bottom: 40px; border-radius: 10px; box-shadow: 0 0px 10px 2px ; background-color: #f2edcb;;
         }
         .map { border-radius: 10px; }
         .map { height: 250px; width: 100%; } /* Fixed height and full width for maps */
@@ -85,23 +88,24 @@
     margin-top: 92%;
     color: white;
     font-weight: bold;
-    /* -webkit-user-select: none;  
+    -webkit-user-select: none;  
     -moz-user-select: none;     
     -ms-user-select: none;      
-    user-select: none;   */
+    user-select: none;  
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
 
-  /* .card-body {
+  .card-body {
     -webkit-user-select: none;  
     -ms-user-select: none;      
     user-select: none;
-  } */
+  }
 
   a {
     color: rgb(0, 4, 255);
   }
+  
   </style>
   
   
@@ -111,7 +115,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
       
-      <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <img src="{% static 'Logo for Navbar.png' %}" alt="Logo" width="70" height="70" class="d-inline-block align-text-top" style="padding-top: 8px">
       <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
       
     </a>
@@ -166,7 +170,7 @@
   </nav>
 
   <div class="container mt-4">
-    <h1 class="mb-4 heading">Festivals</h1>
+    <h1 class="mb-4 header">Festivals</h1>
     <div class="card mb-3 culture-card" style="border-radius: 20px; box-shadow: inset 0 0 10px 2px #000000; border: 1px solid black;">
       <div class="card-body" style="display: flex;   border-radius:20px">
         <p style="width:100%; margin-top:20px; font-size: 19px;" class="card-text">{% translate 'Portugal is a nation that takes great pride in its festivals, which vividly reflect its rich heritage and past culture.' %}
@@ -190,11 +194,11 @@
               <div class="face right"><div class='bottomLine' style="top: 100%; border: 1px solid black;">
                 <center><a href="https://en.wikipedia.org/wiki/Anthony_of_Padua" target="_blank">2. Feast Day of Saint Anthony</a></center></div></div>
               <div class="face left"><div class='bottomLine' style="top: 100%; border: 1px solid black;">
-                <center><a target="_blank">4. Carnival</a></center></div></div>
+                <center><a href="https://www.portugalproperty.com/guide-to-portugal/portugal-destinations/the-portugal-carnival" target="_blank">4. Carnival</a></center></div></div>
               <div class="face top"><div class='bottomLine' style="top: 100%; border: 1px solid black;">
-                <center><a target="_blank">5. Semana Santa</a></center></div></div>
+                <center><a href="https://en.wikipedia.org/wiki/Holy_Week_in_Spain" target="_blank">5. Semana Santa</a></center></div></div>
               <div class="face bottom"><div class='bottomLine' style="top: 100%; border: 1px solid black;">
-                <center><a target="_blank">6. Festa Das Cruzes</a></center></div></div>
+                <center><a href="https://www.visitportugal.com/en/content/festa-das-cruzes" target="_blank">6. Festa Das Cruzes</a></center></div></div>
           </div>
       </div>
       </div>
@@ -402,6 +406,7 @@
       </div>
   </div>
 
+  {% include 'mainsite/discord_modal.html' %}
 
       
       
