--- a/templates/mainsite/diacritics.html
+++ b/templates/mainsite/diacritics.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'architecture.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 </head>
@@ -13,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
         <a class="navbar-brand" href="#">
           
-          <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+          <img src="{% static 'Logo for Navbar.png' %}" alt="Logo" width="70" height="70" class="d-inline-block align-text-top" style="padding-top:8px">
           <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
           
         </a>
@@ -65,15 +66,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portuguese Festivals</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
     <style>
-        .header { color: #ffffff; font-family: Arial, Helvetica, sans-serif   ; font-weight: bold; font-size:52px; }
+        .header {
+     color: #ffffff; font-family: Arial, Helvetica, sans-serif   ; font-weight: bold; font-size:52px; text-shadow: 3px 3px #000000; margin-top: 20px;
+}
         .card-header { background-color: #007bff; color: white; font-weight: bold; font-size: 22px; border: 2px solid black;}
         .footer { background-color: #f8f9fa; text-align: center; padding: 10px; font-size: 0.8rem; }
         .card { 
-            margin-bottom: 40px; border-radius: 10px; box-shadow: 3px 2px 1px 2px ; background-color: beige; border: 3px solid black;
+            margin-bottom: 40px; border-radius: 10px; box-shadow: 3px 2px 1px 2px ; background-color: #f2edcb; border: 3px solid black;
         }
         .card-header { 
             border-top-right-radius: 10px;
@@ -86,7 +89,7 @@
             border-color: black;
             box-shadow: inset 0 0 10px 2px #000000; /* Horizontal offset, vertical offset, blur radius, spread radius, color */
             transition: 0.8s; /* Optional: adds a transition effect when the shadow changes */
-            background-color: beige;
+            background-color: #f2edcb;
             padding: 20px;
             margin-bottom: 20px;
         }
@@ -110,6 +113,22 @@
         border-color: #dee2e6 #dee2e6 #fff; /* Adjust the border color if needed */
     }
 
+    #overview-tab, #usage-tips-tab, #common-mistakes-tab {
+    border: 1px solid black;
+    box-shadow: inset 0px 0px 6px 0px black;
+    margin-top: 20px;
+}
+#overview-tab:hover, #usage-tips-tab:hover, #common-mistakes-tab:hover {
+    border: 1px solid black;
+    background-color: #0075f3;
+    color: white;
+    box-shadow: inset 0px 0px 10px 0px black;
+}
+
+#diacriticTabsContent {
+    margin-top:1%
+}
+
     #paneContent {
         width: 97%;
         margin-left: 4%;
@@ -131,6 +150,16 @@
         font-size: 18px;
     }
 
+    #diacriticTabs {
+    border-bottom: 2px solid black;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+    
+
+    
+
     </style>
 </head>
 <body onload="initMaps()">
@@ -145,7 +174,7 @@
             </p>
         </div>
         <section>
-            <div class="card">
+            <div class="diacritics-card">
                 <ul class="nav nav-tabs" id="diacriticTabs" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="overview-tab" data-bs-toggle="tab" data-bs-target="#overview" type="button" role="tab" aria-controls="overview" aria-selected="true">Overview</button>
@@ -236,7 +265,8 @@
     <script>
    
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    {% include 'mainsite/discord_modal.html' %}
 </body>
 </html>
 
