--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -38,9 +38,9 @@
 }
 
 .goal {
-  color: rgb(43, 175, 43);
+  color: #0905f7;
   font-weight: bold;
-  text-shadow: 1px 1px #020202;
+  
 }
 
 @media (min-width: 768px) { /* Adjusts for medium screens and up */
@@ -85,7 +85,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
       
-      <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <img src="{% static 'Logo for Navbar.png' %}" alt="Logo" width="70" height="70" class="d-inline-block align-text-top" style=" padding-top: 8px;">
       <h1><span class="text-green" style="margin-left: 10px; text-shadow: rgb(233, 225, 183) 1px 1px; ">Portu</span><span class="text-red" style="text-shadow: rgb(233, 225, 183) 1px 1px;">Pro</span></h1>
       
     </a>
@@ -134,7 +134,7 @@
 <div class="container mt-4">
   <div class="text-white">
     {% if user.is_authenticated %}
-    <h1>{{greeting}} {{user.username}}</h1><br>
+    <h1>{{greeting}} {{user.first_name}}</h1><br>
     {% endif %}
   </div>
   
@@ -234,7 +234,7 @@
             
             <h2 class="card-title city-title" style="color: white; font-weight: bold; margin-top: 10px; font-family: Arial, Helvetica, sans-serif; text-shadow: 3px 3px #000000;">{{city}}</h2>
             <div style="position: absolute; top: 10%; right: 10%;">
-              <img src="{{image}}" alt="Weather Icon" style="width: 120%; background-color: rgb(0, 0, 0); border-radius: 15px; box-shadow: inset 0 0 10px 0px rgb(28, 185, 224);">
+              <img src="{{image}}" alt="Weather Icon" style="width: 120%; border-radius: 15px; box-shadow: inset 0 0 10px 0px rgb(28, 185, 224); border: 1px solid black;">
             </div>
             <h3 id="localTime" class="card-text" style="margin-top: 15%">{{current_date}}</h3>
             <h4 id="liveTime"></h4>
@@ -246,7 +246,7 @@
       <!-- Add other widgets like activity tracker and twitter feed -->
       
       <h2 style="color: black; margin-top: 14%; font-weight: bold; width: 120%;">Activity Tracker
-        <a href="#" data-toggle="tooltip" data-html="true" title="Yellow Background - Current Date<br>Green Background - Activity Goal Met<br>Green Text - Question Goal Met" 
+        <a href="#" data-toggle="tooltip" data-html="true" title="Yellow Background - Current Date<br>Green Background - Activity Goal Met<br>Blue Text - Question Goal Met" 
           style="font-size: 20px; color: white;">
           <i class="fas fa-info-circle"></i>
       </a>
@@ -263,7 +263,7 @@
                   <button id="nextMonth">&#8594;</button>
               </th>
             </tr>
-            <tr style="background-color: #ddd186;" >
+            <tr style="background-color: #cec488;" >
                 <th>Sun</th>
                 <th>Mon</th>
                 <th>Tue</th>
@@ -287,8 +287,10 @@
   </div>
 </div>
 
+{% include 'mainsite/discord_modal.html' %}
+
 <!-- Discord Modal -->
-<div class="modal fade" id="discordModal" tabindex="-1" role="dialog" aria-labelledby="discordModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="discordModal" tabindex="-1" role="dialog" aria-labelledby="discordModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
       <div class="modal-content">
           <div class="modal-header">
@@ -306,7 +308,7 @@
           </div>
       </div>
   </div>
-</div>
+</div> -->
 
 {{ user_activity_dates|json_script:"activity-data" }}
 {{ goal_dates|json_script:"goal-data" }}
