--- a/templates/mainsite/vocab.html
+++ b/templates/mainsite/vocab.html
@@ -7,9 +7,10 @@
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script> -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"> <!-- Correct FontAwesome link -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 <link rel="stylesheet" href="{% static 'architecture.css' %}">
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
 <style>
@@ -66,10 +67,12 @@
 
         #user-saved-tab:hover, #overall-list-tab:hover, #general-search-tab:hover {
             border: 1px solid black;
-            background-color: #88c0fc;
+            background-color: #0075f3;
             color: white;
             box-shadow: inset 0px 0px 10px 0px black;
         }
+
+        
 
         #plusBtnGeneral, #plusBtnOverall {
             background-color: rgb(67, 187, 56);
@@ -123,13 +126,43 @@
         background-color: rgb(167, 230, 161);
     }
 
+    #download-button:hover {
+        background-color: rgb(121, 223, 112);
+    }
+
     #delete-all-button {
         background-color:rgb(223, 150, 150)
+    }
+
+    #delete-all-button:hover {
+        background-color:rgb(223, 113, 113)
     }
 
     #vocabTab {
     border-bottom: 2px solid black;
 }
+
+#discordLogo {
+  color: #cab2fb;
+}
+
+#discordLogo:hover{
+  color: #7e61ab;
+}
+
+#discordHref {
+  text-decoration: none
+}
+
+#closeModal:hover {
+  background-color: rgb(224, 107, 107);
+  font-weight: bold;
+}
+
+.header {
+     color: #ffffff; font-family: Arial, Helvetica, sans-serif   ; font-weight: bold; font-size:52px; text-shadow: 3px 3px #000000; margin-top: 20px;
+}
+
 
 </style>
 </head>
@@ -137,7 +170,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-black">
         <a class="navbar-brand" href="#">
           
-          <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+          <img src="{% static 'Logo for Navbar.png' %}" alt="Logo" width="70" height="70" class="d-inline-block align-text-top" style="padding-top: 8px;">
           <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
           
         </a>
@@ -184,7 +217,7 @@
       </nav>
 
   <div class="container mt-3">
-    <h1 class="mb-4 heading">Vocabulary</h1>
+    <h1 class="mb-4 header">Vocabulary</h1>
 
     <div class="card mb-3 vocab-card">
         <div class="card-body">
@@ -429,24 +462,6 @@
     </div>
   </div> -->
 
-  <!-- Bootstrap Modal -->
-<!-- <div class="modal fade" id="downloadModal" tabindex="-1" aria-labelledby="downloadModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="downloadModalLabel">Download Complete</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Your file has begun downloading.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <!-- Delete Confirmation Modal -->
   <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -466,11 +481,10 @@
     </div>
 </div>
 
-<div aria-live="polite" aria-atomic="true" style="position: fixed; top: 0; right: 0; min-height: 200px; z-index: 1050; padding: 20px;">
+<div aria-live="polite" aria-atomic="true" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); min-height: 200px; z-index: 1050;">
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="1000">
       <div class="toast-header">
         <strong class="mr-auto text-primary">Notification</strong>
-        <small>11 mins ago</small>
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
           <span aria-hidden="true" id="closeToast">&times;</span>
         </button>
@@ -481,6 +495,7 @@
     </div>
 </div>
 
+{% include 'mainsite/discord_modal.html' %}
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.9/dist/umd/popper.min.js"></script>
